# CompilationSelective

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  resources.qrc
resources/: lastfile.json
src/: lastfilehelper.cpp  lastfilehelper.h  latexassembler.cpp  latexassembler.h  latexmodel.cpp  latexmodel.h  latexparser.cpp  latexparser.h  processrunner.cpp  processrunner.h
